# used_cars_predictions_llms

./: .dockerignore  .env.example  .flyignore  .gitignore  DESIGN_DECISIONS.md  Dockerfile  PROJECT_PLAN.md  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  constants.py  main.py
backend/app/api/: endpoints.py
backend/app/schemas/: __init__.py  api_schemas.py
backend/app/services/: llm_service.py  model_service.py  rate_limiter.py  validation.py
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: app.js
models/: base_simple_model_v0.pkl
notebooks/: used-cars-xgboost.ipynb
tests/: __init__.py  results_20251116_095114.txt  results_20251116_101434.txt  test_api.py  test_llm_extraction.py
